--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -127,7 +127,11 @@
     </item>
    </layout>
   </widget>
-  <widget class="QStatusBar" name="statusBar"/>
+  <widget class="QStatusBar" name="statusBar">
+   <property name="sizeGripEnabled">
+    <bool>true</bool>
+   </property>
+  </widget>
   <action name="actionHistory">
    <property name="text">
     <string>History</string>
