--- a/helpers.ui
+++ b/helpers.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>555</width>
-    <height>239</height>
+    <width>216</width>
+    <height>294</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,9 +16,9 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>210</y>
-     <width>531</width>
+     <x>0</x>
+     <y>260</y>
+     <width>181</width>
      <height>20</height>
     </rect>
    </property>
@@ -26,7 +26,7 @@
     <enum>Qt::Horizontal</enum>
    </property>
    <property name="standardButtons">
-    <set>QDialogButtonBox::Apply|QDialogButtonBox::Cancel|QDialogButtonBox::Ok|QDialogButtonBox::RestoreDefaults</set>
+    <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
   <widget class="QListWidget" name="helpersList">
@@ -34,8 +34,8 @@
     <rect>
      <x>11</x>
      <y>40</y>
-     <width>99</width>
-     <height>151</height>
+     <width>161</width>
+     <height>211</height>
     </rect>
    </property>
    <property name="verticalScrollBarPolicy">
@@ -51,46 +51,12 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QToolButton" name="removeHelper">
-   <property name="geometry">
-    <rect>
-     <x>115</x>
-     <y>70</y>
-     <width>25</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="icon">
-    <iconset resource="resources.qrc">
-     <normaloff>:/icon/list-remove.svgz</normaloff>:/icon/list-remove.svgz</iconset>
-   </property>
-  </widget>
-  <widget class="QToolButton" name="addHelper">
-   <property name="geometry">
-    <rect>
-     <x>115</x>
-     <y>40</y>
-     <width>25</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="icon">
-    <iconset resource="resources.qrc">
-     <normaloff>:/icon/list-add.svgz</normaloff>:/icon/list-add.svgz</iconset>
-   </property>
-  </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
      <x>11</x>
      <y>21</y>
-     <width>71</width>
+     <width>131</width>
      <height>16</height>
     </rect>
    </property>
@@ -100,133 +66,18 @@
      <verstretch>0</verstretch>
     </sizepolicy>
    </property>
-   <property name="text">
-    <string>Helpers list:</string>
-   </property>
-  </widget>
-  <widget class="Line" name="line">
-   <property name="geometry">
-    <rect>
-     <x>140</x>
-     <y>40</y>
-     <width>16</width>
-     <height>151</height>
-    </rect>
-   </property>
-   <property name="orientation">
-    <enum>Qt::Vertical</enum>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="helperCmdLine">
-   <property name="geometry">
-    <rect>
-     <x>280</x>
-     <y>70</y>
-     <width>261</width>
-     <height>22</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QSpinBox" name="helperGranularity">
-   <property name="geometry">
-    <rect>
-     <x>280</x>
-     <y>130</y>
-     <width>43</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_5">
-   <property name="geometry">
-    <rect>
-     <x>162</x>
-     <y>130</y>
-     <width>70</width>
-     <height>16</height>
-    </rect>
+   <property name="font">
+    <font>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
    </property>
    <property name="text">
-    <string>Granularity: </string>
+    <string>Choose an helpers:</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>162</x>
-     <y>40</y>
-     <width>89</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Helper's Name: </string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_3">
-   <property name="geometry">
-    <rect>
-     <x>162</x>
-     <y>70</y>
-     <width>91</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Command Line: </string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="helperName">
-   <property name="geometry">
-    <rect>
-     <x>280</x>
-     <y>40</y>
-     <width>261</width>
-     <height>22</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_4">
-   <property name="geometry">
-    <rect>
-     <x>162</x>
-     <y>100</y>
-     <width>107</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>File's Extension(s): </string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="helperFileExt">
-   <property name="geometry">
-    <rect>
-     <x>280</x>
-     <y>100</y>
-     <width>261</width>
-     <height>22</height>
-    </rect>
-   </property>
-  </widget>
-  <zorder>helperCmdLine</zorder>
-  <zorder>helperGranularity</zorder>
-  <zorder>label_5</zorder>
-  <zorder>label_2</zorder>
-  <zorder>label_3</zorder>
-  <zorder>helperName</zorder>
-  <zorder>label_4</zorder>
-  <zorder>buttonBox</zorder>
-  <zorder>helpersList</zorder>
-  <zorder>removeHelper</zorder>
-  <zorder>addHelper</zorder>
-  <zorder>label</zorder>
-  <zorder>line</zorder>
-  <zorder>helperFileExt</zorder>
  </widget>
- <resources>
-  <include location="resources.qrc"/>
- </resources>
+ <resources/>
  <connections>
   <connection>
    <sender>buttonBox</sender>
