--- a/preferences.ui
+++ b/preferences.ui
@@ -229,7 +229,7 @@
       </property>
      </widget>
     </widget>
-    <widget class="QWidget" name="layoutWidget">
+    <widget class="QWidget" name="layoutWidget1">
      <property name="geometry">
       <rect>
        <x>0</x>
