--- a/preferences.ui
+++ b/preferences.ui
@@ -88,6 +88,9 @@
        </item>
        <item>
         <widget class="QLineEdit" name="poolDirName">
+         <property name="toolTip">
+          <string>the directory name bound to the current pool</string>
+         </property>
          <property name="readOnly">
           <bool>true</bool>
          </property>
@@ -95,6 +98,9 @@
        </item>
        <item>
         <widget class="QToolButton" name="poolDirButton">
+         <property name="toolTip">
+          <string>changes pool's directory</string>
+         </property>
          <property name="text">
           <string>...</string>
          </property>
@@ -133,7 +139,11 @@
         </widget>
        </item>
        <item row="0" column="1">
-        <widget class="QComboBox" name="stemCBox"/>
+        <widget class="QComboBox" name="stemCBox">
+         <property name="toolTip">
+          <string>uses the selected stemming algorithm</string>
+         </property>
+        </widget>
        </item>
        <item row="1" column="0">
         <widget class="QLabel" name="label_4">
@@ -143,7 +153,11 @@
         </widget>
        </item>
        <item row="1" column="1">
-        <widget class="QComboBox" name="stopwordsCBox"/>
+        <widget class="QComboBox" name="stopwordsCBox">
+         <property name="toolTip">
+          <string>uses the selected stop-word file</string>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
@@ -155,6 +169,9 @@
         <width>181</width>
         <height>101</height>
        </rect>
+      </property>
+      <property name="toolTip">
+       <string>list of helper(s) for the current pool</string>
       </property>
       <property name="autoFillBackground">
        <bool>false</bool>
@@ -183,6 +200,9 @@
         <width>23</width>
         <height>22</height>
        </rect>
+      </property>
+      <property name="toolTip">
+       <string>delete the selected helper</string>
       </property>
       <property name="text">
        <string/>
@@ -220,6 +240,9 @@
         <height>22</height>
        </rect>
       </property>
+      <property name="toolTip">
+       <string>adds a helper for the current pool</string>
+      </property>
       <property name="text">
        <string/>
       </property>
@@ -254,6 +277,9 @@
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="toolTip">
+         <string>selects a pool</string>
+        </property>
        </widget>
       </item>
      </layout>
@@ -271,6 +297,9 @@
        <width>99</width>
        <height>171</height>
       </rect>
+     </property>
+     <property name="toolTip">
+      <string>list of available helpers</string>
      </property>
      <property name="verticalScrollBarPolicy">
       <enum>Qt::ScrollBarAlwaysOn</enum>
@@ -294,6 +323,9 @@
        <height>20</height>
       </rect>
      </property>
+     <property name="toolTip">
+      <string>adds a helper</string>
+     </property>
      <property name="text">
       <string/>
      </property>
@@ -311,6 +343,9 @@
        <height>22</height>
       </rect>
      </property>
+     <property name="toolTip">
+      <string>comma separated list of extensions</string>
+     </property>
     </widget>
     <widget class="QLineEdit" name="helperCmdLine">
      <property name="geometry">
@@ -320,6 +355,9 @@
        <width>231</width>
        <height>22</height>
       </rect>
+     </property>
+     <property name="toolTip">
+      <string>the command name to run</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_6">
@@ -383,6 +421,9 @@
        <height>20</height>
       </rect>
      </property>
+     <property name="toolTip">
+      <string>delete a helper</string>
+     </property>
      <property name="text">
       <string/>
      </property>
@@ -399,6 +440,12 @@
        <width>43</width>
        <height>21</height>
       </rect>
+     </property>
+     <property name="mouseTracking">
+      <bool>false</bool>
+     </property>
+     <property name="toolTip">
+      <string>number of lines length of a document, 0 means documents length of 15 lines</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_9">
@@ -442,6 +489,9 @@
        <height>22</height>
       </rect>
      </property>
+     <property name="toolTip">
+      <string>the name of the helper</string>
+     </property>
     </widget>
     <widget class="QPushButton" name="helperDefaults">
      <property name="geometry">
@@ -451,6 +501,9 @@
        <width>101</width>
        <height>34</height>
       </rect>
+     </property>
+     <property name="toolTip">
+      <string>restores the helpers list to the first installation, any changes will be lost</string>
      </property>
      <property name="text">
       <string>Defaults</string>
